pure: Fix images overlapping entry content flexing the footer

--- a/templates/pure/style.css
+++ b/templates/pure/style.css
@@ -855,6 +855,8 @@ nav.pager ul {
     padding-left: .25em;
     padding-right: .25em;
     font-size: .938rem;
+    display: inline-block;
+    width: 100%;
 }
 .post_info.listed_view .plainList li {
     display: inline-block;
